--- a/src/Nazifa/Doctor/AssignTaskToNurseScene.fxml
+++ b/src/Nazifa/Doctor/AssignTaskToNurseScene.fxml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="537.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="537.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Doctor.AssignTaskToNurseSceneController">
    <children>
       <Label layoutX="175.0" layoutY="37.0" text="Assign Tasks To Nurse">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="181.0" layoutY="104.0" text="Name" />
-      <ComboBox fx:id="selectNurseComboBox" layoutX="264.0" layoutY="100.0" prefWidth="150.0" promptText="select a nurse" />
-      <Label layoutX="181.0" layoutY="145.0" text="Details of the task:" />
-      <TextArea fx:id="nurseTaskDetailTextArea" layoutX="179.0" layoutY="174.0" prefHeight="279.0" prefWidth="251.0" />
+      <Label layoutX="181.0" layoutY="104.0" text="Nurse ID:" />
+      <Label layoutX="181.0" layoutY="205.0" text="Details of the task:" />
+      <TextArea fx:id="nurseTaskDetailTextArea" layoutX="179.0" layoutY="237.0" prefHeight="216.0" prefWidth="251.0" />
       <Button layoutX="274.0" layoutY="464.0" mnemonicParsing="false" onAction="#assignTaskToNurseOnClick" text="Assign" />
       <Button layoutX="38.0" layoutY="37.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
+      <Label layoutX="179.0" layoutY="155.0" text="Doctor ID:" />
+      <TextField fx:id="nurseIDTextField" layoutX="264.0" layoutY="100.0" />
+      <TextField fx:id="doctorIDTextField" layoutX="264.0" layoutY="151.0" />
    </children>
 </AnchorPane>
