--- a/src/Nazifa/Doctor/ViewPrescriptionScene.fxml
+++ b/src/Nazifa/Doctor/ViewPrescriptionScene.fxml
@@ -2,22 +2,33 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="495.0" prefWidth="511.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="549.0" prefWidth="689.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Doctor.ViewPrescriptionSceneController">
    <children>
-      <Label layoutX="134.0" layoutY="14.0" prefHeight="88.0" prefWidth="241.0" text="VIEW PRESCRIPTION">
+      <Label layoutX="217.0" layoutY="2.0" prefHeight="88.0" prefWidth="241.0" text="VIEW PRESCRIPTION">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="patientIdTextField" layoutX="135.0" layoutY="98.0" promptText="patient Id" />
-      <Button layoutX="298.0" layoutY="98.0" mnemonicParsing="false" onAction="#searchButtonOnClick" prefHeight="25.0" prefWidth="77.0" text="Search" />
-      <TextArea fx:id="viewPrescriptionTextArea" layoutX="49.0" layoutY="150.0" prefHeight="300.0" prefWidth="421.0" />
       <Button layoutX="25.0" layoutY="33.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
+      <TableView fx:id="prescriptionTableView" layoutX="74.0" layoutY="123.0" prefHeight="374.0" prefWidth="527.0">
+        <columns>
+          <TableColumn fx:id="doctorIDTableView" prefWidth="75.0" text="Doctor ID" />
+          <TableColumn fx:id="patientIDTableView" prefWidth="75.0" text="Patient ID" />
+            <TableColumn fx:id="DiagnosisTableView" prefWidth="75.0" text="Diagnosis" />
+            <TableColumn fx:id="TreatmentTableView" prefWidth="75.0" text="Treatment" />
+            <TableColumn fx:id="medicineTableView" prefWidth="75.0" text="Medicine" />
+            <TableColumn fx:id="doseTableView" prefWidth="75.0" text="Dose" />
+            <TableColumn fx:id="durationTableView" prefWidth="75.0" text="Duration" />
+        </columns>
+      </TableView>
+      <TextField fx:id="searchTextField" layoutX="282.0" layoutY="78.0" />
+      <Label layoutX="143.0" layoutY="82.0" text="Search By Keyword:" />
+      <Button layoutX="468.0" layoutY="78.0" mnemonicParsing="false" onAction="#searchButtonOnClick" text="Search" />
    </children>
 </AnchorPane>
