--- a/src/CommonScenes/StartScene.fxml
+++ b/src/CommonScenes/StartScene.fxml
@@ -21,5 +21,6 @@
       <Line endX="284.0" endY="95.0" layoutX="10.0" layoutY="10.0" startX="240.29290771484375" startY="80.70712280273438" />
       <Line endX="292.0" endY="105.0" layoutX="44.0" layoutY="-18.0" startX="250.70709228515625" startY="90.29290771484375" />
       <Line endX="282.70709228515625" endY="95.70709228515625" layoutX="54.0" layoutY="-8.0" startX="240.70709228515625" startY="113.70712280273438" />
+      <Button layoutX="34.0" layoutY="338.0" mnemonicParsing="false" onAction="#tempbuttonOnClick" text="temp" />
    </children>
 </AnchorPane>
