--- a/src/Dhara/Accountant/SignOut.fxml
+++ b/src/Dhara/Accountant/SignOut.fxml
@@ -6,7 +6,8 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.SignOutController">
    <children>
-      <Button layoutX="250.0" layoutY="218.0" mnemonicParsing="false" onAction="#signoutOnClick" text="Yes" />
-      <Label layoutX="224.0" layoutY="163.0" prefHeight="21.0" prefWidth="95.0" text="Are you sure?" />
+      <Button layoutX="338.0" layoutY="200.0" mnemonicParsing="false" onAction="#signoutOnClick" text="Yes" />
+      <Label layoutX="253.0" layoutY="156.0" prefHeight="21.0" prefWidth="95.0" text="Are you sure?" />
+      <Button layoutX="221.0" layoutY="200.0" mnemonicParsing="false" onAction="#noButtonOnClick" text="No" />
    </children>
 </AnchorPane>
