--- a/src/Dhara/Nurse/NurseDashBoardScene.fxml
+++ b/src/Dhara/Nurse/NurseDashBoardScene.fxml
@@ -25,11 +25,11 @@
             <Menu mnemonicParsing="false" text="Patient">
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#addPatientDetailsOnClick" text="Add Patient Details" />
-                  <MenuItem mnemonicParsing="false" onAction="#prescriptionPieChartOnClick" text="update prescription pie chart" />
+                  <MenuItem mnemonicParsing="false" onAction="#editDetailsOnClick" text="edit patient details" />
                   <MenuItem mnemonicParsing="false" onAction="#admitPatientOnClick" text="AdmitPatient" />
                   <MenuItem mnemonicParsing="false" onAction="#viewAdmittedPatientOnClick" text="View Admitted Patients" />
                   <MenuItem mnemonicParsing="false" onAction="#patientDetailsOnClick" text="View Patient Details" />
-                  <MenuItem mnemonicParsing="false" onAction="#ViewMedicineChartOnClick" text="View patient meds in chart" />
+                  <MenuItem mnemonicParsing="false" onAction="#dischargePatientOnClick" text="Discharge patient" />
                </items>
             </Menu>
           <Menu mnemonicParsing="false" text="SignOut">
