--- a/src/Dhara/Nurse/AdmitPatientScene.fxml
+++ b/src/Dhara/Nurse/AdmitPatientScene.fxml
@@ -2,20 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.AdmitPatientSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.AdmitPatientSceneController">
    <children>
       <Label layoutX="204.0" layoutY="65.0" text="ADMIT  PATIENT">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="enterPatientIdTextField" layoutX="76.0" layoutY="146.0" promptText="Enter Patient ID to admit" />
-      <Label fx:id="currentPatientStatusLabel" layoutX="91.0" layoutY="200.0" prefHeight="21.0" prefWidth="158.0" text="Patient update Status" />
-      <Button layoutX="348.0" layoutY="195.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
+      <Button layoutX="372.0" layoutY="194.0" mnemonicParsing="false" onAction="#admitButtonOnClick" text="admit" />
+      <TableView fx:id="patientTableView" layoutX="104.0" layoutY="125.0" prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="patientIdTableColoumn" prefWidth="75.0" text="patientId" />
+          <TableColumn fx:id="admittedStatusTableColoumn" prefWidth="124.0" text="Admittedstatus" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
