--- a/src/Dhara/Nurse/NurseDashBoardScene.fxml
+++ b/src/Dhara/Nurse/NurseDashBoardScene.fxml
@@ -27,9 +27,10 @@
                   <MenuItem mnemonicParsing="false" onAction="#addPatientDetailsOnClick" text="Add Patient Details" />
                   <MenuItem mnemonicParsing="false" onAction="#editDetailsOnClick" text="edit patient details" />
                   <MenuItem mnemonicParsing="false" onAction="#admitPatientOnClickYas" text="AdmitPatient" />
-                  <MenuItem mnemonicParsing="false" text="View Admitted Patients" />
-                  <MenuItem mnemonicParsing="false" onAction="#patientDetailsOnClick" text="View Patient Details" />
+                  <MenuItem mnemonicParsing="false" onAction="#patientInfoPdf" text="Patient Info" />
+                  <MenuItem mnemonicParsing="false" onAction="#patientChartOnClick" text="Admitted Chart" />
                   <MenuItem mnemonicParsing="false" onAction="#dischargePatientOnClick" text="Discharge patient" />
+                  <MenuItem mnemonicParsing="false" onAction="#lineChartOnClick" text="Admitted over time" />
                </items>
             </Menu>
           <Menu mnemonicParsing="false" text="SignOut">
