--- a/src/Dhara/Nurse/AddPatientDetails.fxml
+++ b/src/Dhara/Nurse/AddPatientDetails.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.AddPatientDetailsController">
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171"fx:controller="Dhara.Nurse.AddPatientDetailsController">
    <children>
-      <ComboBox fx:id="patientidComboBox" layoutX="90.0" layoutY="79.0" prefWidth="150.0" promptText="patient ID" />
-      <TextArea fx:id="detailsTextArea" layoutX="90.0" layoutY="127.0" prefHeight="200.0" prefWidth="280.0" promptText="add details" />
-      <Button layoutX="428.0" layoutY="169.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="add" />
+      <ComboBox fx:id="patientIDComboBox" layoutX="66.0" layoutY="58.0" prefWidth="150.0" promptText="patient id" />
+      <TextArea fx:id="detailsTextField" layoutX="66.0" layoutY="107.0" prefHeight="200.0" prefWidth="237.0" promptText="add details here" />
+      <Button layoutX="405.0" layoutY="192.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
    </children>
 </AnchorPane>
