--- a/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
+++ b/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
@@ -7,22 +7,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.ViewAssignedtasksSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.ViewAssignedtasksSceneController">
    <children>
-      <Label layoutX="167.0" layoutY="68.0" text="VIEW ASSIGNED TASKS">
+      <Label layoutX="161.0" layoutY="31.0" text="VIEW ASSIGNED TASKS">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TableView fx:id="taskTableView" layoutX="67.0" layoutY="150.0" prefHeight="200.0" prefWidth="298.0">
+      <TableView fx:id="taskTableView" layoutX="57.0" layoutY="158.0" prefHeight="200.0" prefWidth="509.0">
         <columns>
-          <TableColumn fx:id="nameTableColoumn" prefWidth="78.0" text="Name" />
-          <TableColumn fx:id="designationTableColoumn" prefWidth="95.0" text="Designation" />
-            <TableColumn fx:id="taskTableColoumn" prefWidth="124.0" text="Task" />
+          <TableColumn fx:id="senderIDTableColoumn" prefWidth="128.0" text="Sender Id" />
+            <TableColumn fx:id="taskTableColoumn" prefWidth="273.0" text="Task" />
+            <TableColumn fx:id="completedStatusTableColoumn" prefWidth="106.0" text="Completion" />
         </columns>
       </TableView>
-      <Button layoutX="414.0" layoutY="277.0" mnemonicParsing="false" onAction="#markAsDoneOnClick" text="Mark as Done" />
-      <Label layoutX="392.0" layoutY="181.0" prefHeight="79.0" prefWidth="157.0" text="Click on a task to choose it to mark as Done" wrapText="true" />
+      <Button layoutX="437.0" layoutY="103.0" mnemonicParsing="false" onAction="#markAsDoneOnClick" text="Mark as Done" />
+      <Label layoutX="85.0" layoutY="79.0" prefHeight="79.0" prefWidth="352.0" text="Click on a task to choose it to mark as Done" wrapText="true" />
    </children>
 </AnchorPane>
