--- a/src/Nazifa/Doctor/Signout.fxml
+++ b/src/Nazifa/Doctor/Signout.fxml
@@ -7,6 +7,7 @@
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Doctor.SignoutController">
    <children>
       <Label layoutX="242.0" layoutY="149.0" text="Are you sure?" />
-      <Button layoutX="253.0" layoutY="200.0" mnemonicParsing="false" onAction="#yesButtonOnClick" text="Yes" />
+      <Button layoutX="216.0" layoutY="200.0" mnemonicParsing="false" onAction="#yesButtonOnClick" text="Yes" />
+      <Button layoutX="298.0" layoutY="200.0" mnemonicParsing="false" onAction="#noButtonOnClick" text="No" />
    </children>
 </AnchorPane>
