--- a/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
@@ -3,14 +3,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.CreateInsuranceRecordSceneController">
    <children>
-      <TextField fx:id="ItemTextField" layoutX="107.0" layoutY="209.0" prefHeight="38.0" prefWidth="187.0" promptText="item ensured" />
-      <TextField fx:id="amtTextField" layoutX="107.0" layoutY="258.0" prefHeight="35.0" prefWidth="187.0" promptText="insurance amount" />
+      <TextField fx:id="ItemTextField" layoutX="107.0" layoutY="141.0" prefHeight="38.0" prefWidth="187.0" promptText="item ensured" />
+      <TextField fx:id="amtTextField" layoutX="107.0" layoutY="189.0" prefHeight="35.0" prefWidth="187.0" promptText="insurance amount" />
       <Button layoutX="375.0" layoutY="247.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
       <Button layoutX="21.0" layoutY="20.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
       <Label layoutX="140.0" layoutY="86.0" text="CREATE INSURANCE RECORD">
@@ -18,6 +19,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <DatePicker fx:id="DOIdatepicker" layoutX="107.0" layoutY="305.0" prefHeight="31.0" prefWidth="187.0" promptText="Date of Issue" />
+      <DatePicker fx:id="DOIdatepicker" layoutX="107.0" layoutY="232.0" prefHeight="31.0" prefWidth="187.0" promptText="Date of Issue" />
+      <TextArea fx:id="detailsTextArea" layoutX="107.0" layoutY="269.0" prefHeight="83.0" prefWidth="187.0" promptText="add details" />
    </children>
 </AnchorPane>
