--- a/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -16,14 +17,14 @@
             <TableColumn fx:id="dateOfIssueTableColoumn" prefWidth="138.0" text="date of issue" />
         </columns>
       </TableView>
-      <Button layoutX="416.0" layoutY="241.0" mnemonicParsing="false" onAction="#addInsuranceInstanceonClick" prefHeight="95.0" prefWidth="99.0" text="Add new insurance instance" wrapText="true" />
-      <Button layoutX="416.0" layoutY="200.0" mnemonicParsing="false" onAction="#viewDetailsOnButton" text="View details" />
-      <Label layoutX="411.0" layoutY="102.0" prefHeight="78.0" prefWidth="153.0" text="Choose and entry and click here to view details:" wrapText="true" />
+      <Button layoutX="423.0" layoutY="162.0" mnemonicParsing="false" onAction="#viewDetailsOnButton" text="View details" />
+      <Label layoutX="396.0" layoutY="85.0" prefHeight="78.0" prefWidth="153.0" text="Choose and entry and click here to view details:" wrapText="true" />
       <Label layoutX="170.0" layoutY="31.0" prefHeight="35.0" prefWidth="261.0" text="INSURANCE REPORTS">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <Button layoutX="28.0" layoutY="18.0" mnemonicParsing="false" onAction="#BackOnClick" text="Back" />
+      <TextArea fx:id="detailsTextField" layoutX="396.0" layoutY="209.0" prefHeight="154.0" prefWidth="189.0" />
    </children>
 </AnchorPane>
