--- a/src/Dhara/Nurse/PatientInfoPdf.fxml
+++ b/src/Dhara/Nurse/PatientInfoPdf.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.PatientInfoPdfController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.PatientInfoPdfController">
    <children>
       <TableView fx:id="patientTableView" layoutX="91.0" layoutY="151.0" prefHeight="200.0" prefWidth="378.0">
         <columns>
