--- a/src/Dhara/Nurse/AddFeedbackNurse.fxml
+++ b/src/Dhara/Nurse/AddFeedbackNurse.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.AddFeedbackNurseController">
+   <children>
+      <TextArea fx:id="feedbackTextArea" layoutX="142.0" layoutY="100.0" prefHeight="200.0" prefWidth="304.0" promptText="Enter feedback here" />
+      <Button layoutX="276.0" layoutY="312.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
+      <Label layoutX="187.0" layoutY="49.0" text="ADD FEEDBACK">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
