--- a/src/Dhara/Nurse/AdmitPatientScene.fxml
+++ b/src/Dhara/Nurse/AdmitPatientScene.fxml
@@ -9,17 +9,18 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.AdmitPatientSceneController">
    <children>
-      <Label layoutX="204.0" layoutY="65.0" text="ADMIT  PATIENT">
+      <Label layoutX="204.0" layoutY="57.0" text="ADMIT  PATIENT">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="372.0" layoutY="194.0" mnemonicParsing="false" onAction="#admitButtonOnClick" text="admit" />
-      <TableView fx:id="patientTableView" layoutX="104.0" layoutY="125.0" prefHeight="200.0" prefWidth="200.0">
+      <Button layoutX="374.0" layoutY="207.0" mnemonicParsing="false" onAction="#admitButtonOnClick" prefHeight="59.0" prefWidth="59.0" text="admit" />
+      <TableView fx:id="patientTableView" layoutX="133.0" layoutY="136.0" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="patientIdTableColoumn" prefWidth="75.0" text="patientId" />
           <TableColumn fx:id="admittedStatusTableColoumn" prefWidth="124.0" text="Admittedstatus" />
         </columns>
       </TableView>
+      <Label layoutX="183.0" layoutY="92.0" text="Click on patient and click admit button" />
    </children>
 </AnchorPane>
