--- a/src/Dhara/Nurse/LineChartPatientAdmission.fxml
+++ b/src/Dhara/Nurse/LineChartPatientAdmission.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.LineChartPatientAdmissionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.LineChartPatientAdmissionController">
    <children>
-      <LineChart fx:id="patientAdmittedLineChart" layoutX="80.0" layoutY="49.0" prefHeight="315.0" prefWidth="406.0">
+      <LineChart fx:id="patientAdmittedLineChart" layoutX="80.0" layoutY="49.0" prefHeight="315.0" prefWidth="406.0" title="PATIENTS ADMITTED OVER TIME">
          <xAxis>
             <CategoryAxis fx:id="timeXaxis" label="Time" side="BOTTOM" />
          </xAxis>
