--- a/src/Dhara/Nurse/PatientInfoPdf.fxml
+++ b/src/Dhara/Nurse/PatientInfoPdf.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.PatientInfoPdfController">
    <children>
@@ -16,6 +18,11 @@
             <TableColumn fx:id="emailTableColoumn" prefWidth="75.0" text="email" />
         </columns>
       </TableView>
-      <Button layoutX="421.0" layoutY="107.0" mnemonicParsing="false" onAction="#onClickMakePdf" text="Make pdf" />
+      <Button layoutX="239.0" layoutY="103.0" mnemonicParsing="false" onAction="#onClickMakePdf" text="Make pdf" />
+      <Label layoutX="114.0" layoutY="54.0" prefHeight="35.0" prefWidth="354.0" text="VIEW PATIENT INFORMATION">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
