--- a/src/Nazifa/Patient/patientDashboard.fxml
+++ b/src/Nazifa/Patient/patientDashboard.fxml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Patient.PatientDashboardController">
-    
-</AnchorPane>
+<BorderPane fx:id="patientDashBoardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Patient.PatientDashboardController">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="MyDesk">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#bookAppointmentsOnclick" text="Book Appointments" />
+                  <MenuItem mnemonicParsing="false" onAction="#medicalBillsOnClick" text="Medical Bills" />
+                  <MenuItem mnemonicParsing="false" onAction="#prescriptionOnClick" text="Prescription" />
+                  <MenuItem mnemonicParsing="false" onAction="#viewTestsOnClick" text="View Tests" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Other">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#signOutOnClick" text="SignOut" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <Label text="WELCOME, PATIENT!" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+   </center>
+</BorderPane>
