--- a/src/Dhara/Nurse/AddResignationNurse.fxml
+++ b/src/Dhara/Nurse/AddResignationNurse.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.AddResignationNurseController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.AddResignationNurseController">
    <children>
-      <TextArea layoutX="89.0" layoutY="128.0" prefHeight="200.0" prefWidth="278.0" promptText="type resignation here." />
+      <TextArea fx:id="resignationTextArea" layoutX="89.0" layoutY="128.0" prefHeight="200.0" prefWidth="278.0" promptText="type resignation here." />
       <Button layoutX="398.0" layoutY="297.0" mnemonicParsing="false" onAction="#addResignationOnClick" text="add" />
       <Label layoutX="219.0" layoutY="81.0" text="RESIGNATION">
          <font>
