--- a/src/Nazifa/Patient/BookAppointmentScene.fxml
+++ b/src/Nazifa/Patient/BookAppointmentScene.fxml
@@ -7,21 +7,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Patient.BookAppointmentSceneController">
    <children>
       <Label layoutX="167.0" layoutY="47.0" text="BOOK APPOINTMENT">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="26.0" layoutY="29.0" mnemonicParsing="false" text="Back" />
-      <TableView layoutX="177.0" layoutY="111.0" prefHeight="200.0" prefWidth="200.0">
+      <Button layoutX="26.0" layoutY="29.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
+      <TableView fx:id="appointmentBookingTableView" layoutX="169.0" layoutY="107.0" prefHeight="200.0" prefWidth="248.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn fx:id="doctorIDTableColumn" prefWidth="75.0" text="DoctorID" />
+            <TableColumn fx:id="dateTableColumn" prefWidth="75.0" text="Date" />
+            <TableColumn fx:id="timeTableColumn" prefWidth="75.0" text="Time" />
         </columns>
       </TableView>
-      <Button layoutX="251.0" layoutY="344.0" mnemonicParsing="false" text="Book" />
+      <Button layoutX="270.0" layoutY="346.0" mnemonicParsing="false" onAction="#bookButtonOnClick" text="Book" />
+      <Label layoutX="189.0" layoutY="318.0" text="Select a row, then click book appointment" />
    </children>
 </AnchorPane>
