--- a/src/Nazifa/Doctor/ViewAppointments.fxml
+++ b/src/Nazifa/Doctor/ViewAppointments.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,11 +11,12 @@
       <Label layoutX="216.0" layoutY="43.0" text="VIEW APPOINTMENTS" />
       <TableView fx:id="appointmentTableView" layoutX="117.0" layoutY="90.0" prefHeight="200.0" prefWidth="351.0">
         <columns>
-          <TableColumn fx:id="doctorIDTableColumn" prefWidth="75.0" text="Doctor ID" />
+          <TableColumn fx:id="patientIDTableColumn" prefWidth="75.0" text="Patient ID" />
           <TableColumn fx:id="dateTableColumn" prefWidth="75.0" text="Date" />
             <TableColumn fx:id="timeTableColumn" prefWidth="75.0" text="Time" />
             <TableColumn fx:id="completedStatusTableColumn" prefWidth="123.0" text="Completed Status" />
         </columns>
       </TableView>
+      <Button layoutX="34.0" layoutY="39.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
 </AnchorPane>
