--- a/src/Nushrat/Optermetrist/makeSchedule.fxml
+++ b/src/Nushrat/Optermetrist/makeSchedule.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="491.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nushrat.Optermetrist.ContactLensServiceController">
+<AnchorPane id="AnchorPane" prefHeight="491.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nushrat.Optermetrist.makeScheduleController">
    <children>
       <Label layoutX="229.0" layoutY="31.0" text="Make Schedule">
          <font>
