--- a/src/Dhara/Accountant/MakeABillScene.fxml
+++ b/src/Dhara/Accountant/MakeABillScene.fxml
@@ -27,7 +27,7 @@
          </font>
       </Label>
       <Label layoutX="323.0" layoutY="99.0" text="Qty" />
-      <Label fx:id="updateStatus" layoutX="34.0" layoutY="240.0" prefHeight="21.0" prefWidth="142.0" />
+      <Label fx:id="updateStatus" layoutX="34.0" layoutY="229.0" prefHeight="61.0" prefWidth="142.0" wrapText="true" />
       <Line endX="-91.0" endY="274.0" layoutX="123.0" layoutY="27.0" startX="435.0" startY="274.0" />
       <Label layoutX="208.0" layoutY="99.0" text="Price" />
       <Label fx:id="totalOutputTextField" layoutX="195.0" layoutY="231.0" prefHeight="61.0" prefWidth="93.0" text="Total shown here" wrapText="true" />
