--- a/src/Daiyan/HROfficerDashboardScene.fxml
+++ b/src/Daiyan/HROfficerDashboardScene.fxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Daiyan.HROfficerDashboardSceneController">
-    
-</AnchorPane>
+<BorderPane fx:id="HROfficerDashboard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Daiyan.HROfficerDashboardSceneController">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="My Desk">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#addEmployeeOnClick" text="Add employee" />
+                  <MenuItem mnemonicParsing="false" onAction="#addEmployeeOnClick" text="Add resignation" />
+                  <MenuItem mnemonicParsing="false" onAction="#addEmployeeOnClick" text="Add feedback" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+</BorderPane>
