--- a/src/Nushrat/Optermetrist/AddTestReport.fxml
+++ b/src/Nushrat/Optermetrist/AddTestReport.fxml
@@ -19,9 +19,9 @@
       <Label layoutX="53.0" layoutY="88.0" text="Patient ID:" />
       <TextField fx:id="enterPatientIDTextField" layoutX="128.0" layoutY="84.0" promptText="Enter Patient ID" />
       <Label layoutX="53.0" layoutY="121.0" text="Test Name:" />
-      <ComboBox fx:id="selectTestNameComboBox" layoutX="128.0" layoutY="117.0" prefWidth="150.0" promptText="Select Test Name" />
+      <ComboBox fx:id="testNameComboBox" layoutX="128.0" layoutY="117.0" prefWidth="150.0" promptText="Select Test Name" />
       <Label layoutX="47.0" layoutY="192.0" text="Report Status" />
-      <ComboBox fx:id="SelectStatusComboBox" layoutX="129.0" layoutY="188.0" prefWidth="150.0" promptText="Select Status" />
+      <ComboBox fx:id="statusComboBox" layoutX="129.0" layoutY="188.0" prefWidth="150.0" promptText="Select Status" />
       <Label layoutX="54.0" layoutY="159.0" text="Results:" />
       <TextField fx:id="enterResultTextField" layoutX="129.0" layoutY="155.0" promptText="Enter Results" />
       <Button layoutX="149.0" layoutY="268.0" mnemonicParsing="false" onMouseClicked="#createFileBtnOnClick" prefHeight="25.0" prefWidth="129.0" text="Create As File" />
