--- a/src/Nushrat/Optermetrist/SendTaskToNurse.fxml
+++ b/src/Nushrat/Optermetrist/SendTaskToNurse.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -14,14 +15,14 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Button layoutX="95.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#alertCompleteBtnOnClick" prefHeight="30.0" prefWidth="108.0" text="Completed" />
-      <Button layoutX="224.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#alertIncompleteBtnOnClick" prefHeight="30.0" prefWidth="108.0" text="Incomplete" />
       <Label layoutX="95.0" layoutY="103.0" text="Assigner ID:" />
       <Label layoutX="95.0" layoutY="153.0" text="Receiver ID:" />
       <Label layoutX="96.0" layoutY="192.0" text="Task Details:" />
-      <Button layoutX="353.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#dashboardBtnOnClick" prefHeight="30.0" prefWidth="147.0" text="Return To Dashboard" wrapText="true" />
+      <Button layoutX="353.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#addTaskBtnOnClick" prefHeight="30.0" prefWidth="147.0" text="Add Task" wrapText="true" />
       <TextField fx:id="enterAssignerIdTextField" layoutX="175.0" layoutY="99.0" promptText="Enter" />
       <TextField fx:id="enterReceiverIdTextField" layoutX="175.0" layoutY="141.0" promptText="Enter" />
       <TextArea fx:id="writeTaskDetailsTextArea" layoutX="178.0" layoutY="177.0" prefHeight="115.0" prefWidth="321.0" promptText="Write Task in Details" />
+      <Label layoutX="353.0" layoutY="103.0" text="Task Status:" />
+      <ComboBox fx:id="taskStatusComboBox" layoutX="424.0" layoutY="99.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
