--- a/src/Nushrat/Optermetrist/ViewTestDetails.fxml
+++ b/src/Nushrat/Optermetrist/ViewTestDetails.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -26,10 +27,11 @@
       <TextField fx:id="enterDoctorNameTextField" layoutX="180.0" layoutY="261.0" prefHeight="25.0" prefWidth="161.0" promptText="Enter Doctor Name" />
       <ComboBox fx:id="selectTestNameComboBox" layoutX="180.0" layoutY="145.0" prefHeight="25.0" prefWidth="161.0" promptText="Select Test" />
       <ComboBox fx:id="selectRecommendationComboBox1" layoutX="180.0" layoutY="300.0" prefHeight="25.0" prefWidth="161.0" promptText="Select CheckUp Status" />
-      <Button layoutX="396.0" layoutY="174.0" mnemonicParsing="false" onMouseClicked="#popupViewTestDetailsBtnOnClick" prefHeight="78.0" prefWidth="148.0" text="View Test Details" textAlignment="CENTER" wrapText="true">
+      <Button layoutX="215.0" layoutY="344.0" mnemonicParsing="false" onMouseClicked="#viewTestDetailsBtnOnClick" prefHeight="25.0" prefWidth="126.0" text="View Test Details" textAlignment="CENTER" wrapText="true">
          <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="10.0" />
          </font>
       </Button>
+      <TextArea fx:id="viewDetailsTextArea" layoutX="375.0" layoutY="109.0" prefHeight="257.0" prefWidth="200.0" promptText="You will see details here" />
    </children>
 </AnchorPane>
