--- a/src/Dhara/Accountant/AddFeedBackAccountant.fxml
+++ b/src/Dhara/Accountant/AddFeedBackAccountant.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Accountant.AddFeedBackAccountantController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.AddFeedBackAccountantController">
    <children>
-      <TextArea fx:id="feedbackTextArea" layoutX="116.0" layoutY="108.0" prefHeight="200.0" prefWidth="200.0" promptText="add feedback" />
-      <Label layoutX="138.0" layoutY="63.0" prefHeight="21.0" prefWidth="223.0" text="ADD FEEDBACK">
+      <TextArea fx:id="feedbackTextArea" layoutX="90.0" layoutY="160.0" prefHeight="200.0" prefWidth="366.0" promptText="add feedback here. This is completely annonymous." />
+      <Label layoutX="189.0" layoutY="53.0" prefHeight="35.0" prefWidth="184.0" text="ADD FEEDBACK">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="329.0" layoutY="271.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
+      <Button layoutX="470.0" layoutY="329.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
+      <Label layoutX="97.0" layoutY="88.0" prefHeight="65.0" prefWidth="352.0" text="Add your feedback regarding BD eye hospital here. This is completely annnonymous." wrapText="true" />
    </children>
 </AnchorPane>
