--- a/src/Dhara/Nurse/AdmitPatientScene.fxml
+++ b/src/Dhara/Nurse/AdmitPatientScene.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -14,13 +15,16 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="374.0" layoutY="207.0" mnemonicParsing="false" onAction="#admitButtonOnClick" prefHeight="59.0" prefWidth="59.0" text="admit" />
-      <TableView fx:id="patientTableView" layoutX="133.0" layoutY="136.0" prefHeight="200.0" prefWidth="200.0">
+      <Button layoutX="367.0" layoutY="239.0" mnemonicParsing="false" onAction="#admitButtonOnClick" prefHeight="59.0" prefWidth="59.0" text="admit" />
+      <TableView fx:id="patientTableView" layoutX="143.0" layoutY="160.0" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="patientIdTableColoumn" prefWidth="75.0" text="patientId" />
           <TableColumn fx:id="admittedStatusTableColoumn" prefWidth="124.0" text="Admittedstatus" />
         </columns>
       </TableView>
-      <Label layoutX="183.0" layoutY="92.0" text="Click on patient and click admit button" />
+      <Label layoutX="162.0" layoutY="92.0" text="Click on patient and click admit button" />
+      <TextField fx:id="idSearchText" layoutX="103.0" layoutY="119.0" promptText="search for patient ID" />
+      <Button layoutX="300.0" layoutY="119.0" mnemonicParsing="false" onAction="#searchButtonOnClick" text="Search" />
+      <Button layoutX="375.0" layoutY="119.0" mnemonicParsing="false" onAction="#loadAllOnClick" text="Load all" />
    </children>
 </AnchorPane>
