--- a/src/Dhara/Nurse/DischargePatient.fxml
+++ b/src/Dhara/Nurse/DischargePatient.fxml
@@ -4,23 +4,27 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.DischargePatientController">
    <children>
-      <TableView fx:id="patientTableView" layoutX="91.0" layoutY="152.0" prefHeight="200.0" prefWidth="243.0">
+      <TableView fx:id="patientTableView" layoutX="91.0" layoutY="167.0" prefHeight="200.0" prefWidth="243.0">
         <columns>
           <TableColumn fx:id="patientIDTableColoumn" prefWidth="109.0" text="patient ID" />
-          <TableColumn fx:id="admittedPatientTableColoumn" prefWidth="133.0" text="Admitted" />
+          <TableColumn fx:id="admittedPatientTableColoumn" prefWidth="133.0" text="Admitted status" />
         </columns>
       </TableView>
-      <Button layoutX="404.0" layoutY="221.0" mnemonicParsing="false" onAction="#dischargePatientOnAction" text="Discharge" />
-      <Label layoutX="174.0" layoutY="54.0" prefHeight="35.0" prefWidth="252.0" text="DISCHARGE PATIENT">
+      <Button layoutX="371.0" layoutY="236.0" mnemonicParsing="false" onAction="#dischargePatientOnAction" prefHeight="76.0" prefWidth="159.0" text="Discharge" />
+      <Label layoutX="174.0" layoutY="39.0" prefHeight="35.0" prefWidth="252.0" text="DISCHARGE PATIENT">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="112.0" layoutY="89.0" text="Click on patient and click discharge to discharge them" />
+      <Label layoutX="112.0" layoutY="74.0" text="Click on patient and click discharge to discharge them" />
+      <TextField fx:id="patientIDsearchField" layoutX="91.0" layoutY="120.0" promptText="search patient ID" />
+      <Button layoutX="291.0" layoutY="120.0" mnemonicParsing="false" onAction="#searchButtonOnClick" text="search" />
+      <Button layoutX="361.0" layoutY="120.0" mnemonicParsing="false" onAction="#loadAllOnClick" text="load all" />
    </children>
 </AnchorPane>
