--- a/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
+++ b/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
@@ -22,6 +22,6 @@
         </columns>
       </TableView>
       <Button layoutX="437.0" layoutY="103.0" mnemonicParsing="false" onAction="#markAsDoneOnClick" text="Mark as Done" />
-      <Label layoutX="85.0" layoutY="79.0" prefHeight="79.0" prefWidth="352.0" text="Click on a task to choose it to mark as Done" wrapText="true" />
+      <Label layoutX="85.0" layoutY="79.0" prefHeight="79.0" prefWidth="352.0" text="Click on a task to mark as Done" wrapText="true" />
    </children>
 </AnchorPane>
