--- a/src/Nazifa/Patient/PatientDash.fxml
+++ b/src/Nazifa/Patient/PatientDash.fxml
@@ -7,16 +7,18 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="patientDashBoardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Patient.PatientDashboardController">
+<BorderPane fx:id="patientDashBoardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Patient.PatientDashController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="MyDesk">
             <items>
-              <MenuItem mnemonicParsing="false" onAction="#bookAppointmentsOnclick" text="Book Appointments" />
+              <MenuItem mnemonicParsing="false" onAction="#bookAppointmentOnClick" text="Book Appointment" />
                   <MenuItem mnemonicParsing="false" onAction="#medicalBillsOnClick" text="Medical Bills" />
                   <MenuItem mnemonicParsing="false" onAction="#prescriptionOnClick" text="Prescription" />
                   <MenuItem mnemonicParsing="false" onAction="#viewTestsOnClick" text="View Tests" />
+                  <MenuItem mnemonicParsing="false" onAction="#addFeedbackOnClick" text="Add Feedback" />
+                  <MenuItem mnemonicParsing="false" onAction="#complaintOnClick" text="Complaint" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Other">
