--- a/src/Nushrat/Pharmacist/ViewPrescritionChart.fxml
+++ b/src/Nushrat/Pharmacist/ViewPrescritionChart.fxml
@@ -9,16 +9,15 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nushrat.Pharmacist.ViewPrescriptionChartController">
    <children>
-      <Label layoutX="68.0" layoutY="26.0" prefHeight="47.0" prefWidth="448.0" style="-fx-background-color: #e1def5;" text="Proportion of patients receiving medication prescriptions for eye conditions" textAlignment="CENTER" textFill="#cea9bc" wrapText="true">
+      <Label layoutX="159.0" layoutY="25.0" prefHeight="47.0" prefWidth="272.0" style="-fx-background-color: #e1def5;" text="Proportion of patients paying their Bill" textFill="#cea9bc" wrapText="true">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
       <PieChart fx:id="pieChart" layoutX="68.0" layoutY="83.0" prefHeight="181.0" prefWidth="448.0" style="-fx-background-color: #e1def5;" />
-      <Button layoutX="400.0" layoutY="339.0" mnemonicParsing="false" onMouseDragged="#addValuesToChartBtnOnClick" text="Add Values To Chart" />
       <Label fx:id="statusLabel" layoutX="68.0" layoutY="271.0" prefHeight="47.0" prefWidth="307.0" style="-fx-background-color: #cea9bc;" />
-      <Button layoutX="400.0" layoutY="282.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Load Pie Chart" />
-      <TextField fx:id="eyeConditionsTextField" layoutX="68.0" layoutY="339.0" promptText="Eye Color" />
-      <TextField fx:id="percentageOfColorTextField1" layoutX="226.0" layoutY="339.0" promptText="Percentage" />
+      <Button layoutX="400.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#loadChartBtnOnClk" prefHeight="25.0" prefWidth="116.0" text="Load Pie Chart" />
+      <TextField fx:id="statusTextField" layoutX="68.0" layoutY="339.0" promptText="Status" />
+      <TextField fx:id="percentageTextField1" layoutX="226.0" layoutY="339.0" promptText="Percentage" />
    </children>
 </AnchorPane>
