--- a/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
@@ -26,6 +26,6 @@
       </Label>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
       <Button layoutX="379.0" layoutY="146.0" mnemonicParsing="false" onAction="#viewDetailsOnClick" text="View Details" />
-      <Label fx:id="detailsTextField" layoutX="329.0" layoutY="190.0" prefHeight="148.0" prefWidth="208.0" style="-fx-background-color: white;" />
+      <Label fx:id="detailsTextField" layoutX="329.0" layoutY="190.0" prefHeight="148.0" prefWidth="208.0" style="-fx-background-color: white;" wrapText="true" />
    </children>
 </AnchorPane>
